<?xml version="1.0"?>
<package format="2">
  <name>mujoco_screw_plugin</name>
  <version>1.0.0</version>
  <description>The mujoco_screw_plugin package</description>


  <maintainer email="fpatzelt@techfak.uni-bielefeld.de">Florian Patzelt</maintainer>
  <author>Florian Patzelt</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>pluginlib</exec_depend>

  <depend>mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mujoco_screw_plugin.xml" />
  </export>
</package>
